# valerax

./: .gitignore  CMakeLists.txt  DTL_LORE.md  README.md  WGD_REPORT.md  install.sh
patches/: generaxcore_consensus_export_guards.patch
scripts/: plot_event_trees.py  summarize_rediploidization.py
src/ale/: AleArguments.cpp  AleArguments.hpp  AleEvaluator.cpp  AleEvaluator.hpp  AleOptimizer.cpp  CMakeLists.txt  Highways.cpp  MultiModel.hpp  UndatedDLMultiModel.hpp  UndatedDTLMultiModel.hpp  ale.cpp
tests/: dtl_lore_regression.sh  lore_marginal.cpp  lore_modelselection_sanity.cpp  multi_wgd_regression.sh  wgd_regression.cpp
validation/example-1/: README.md  SOURCE.md  make_inputs.py
validation/example-1/mappings/: OG0004512.link  OG0004518.link  OG0004524.link  OG0004533.link  OG0004539.link  OG0004540.link  OG0004544.link  OG0004546.link  OG0004548.link  OG0004558.link  OG0004585.link  OG0004590.link
